--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>org.example</groupId>
     <artifactId>spring-common-error</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>spring-core-lesson</module>
+    </modules>
     <packaging>pom</packaging>
 
     <properties>
